--- a/chatproject/docker-compose.yaml
+++ b/chatproject/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
 
   kafka:
+    restart: always
     image: confluentinc/cp-kafka:latest
     hostname: kafka
     ports:
